--- a/src/main/res/layout-xlarge/activity_splash.xml
+++ b/src/main/res/layout-xlarge/activity_splash.xml
@@ -23,4 +23,18 @@
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="73dp" />
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbSplash"
+        android:layout_alignParentBottom="true"
+        android:max="100"
+        android:visibility="invisible"
+        android:indeterminate="false"
+        android:layout_alignParentRight="true"
+        android:progressTint="#f00"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
