--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#000</color>
     <color name="showCaseTitle">#F00</color>
     <color name="showCaseText">#0cf</color>
+    <color name="showCaseBackground">#0cf</color>
+
+    <color name="tutorial_slide_1_background">#f00</color>
+    <color name="tutorial_slide_2_background">#0cf</color>
 </resources>
