--- a/src/main/res/layout-small/activity_splash.xml
+++ b/src/main/res/layout-small/activity_splash.xml
@@ -22,4 +22,19 @@
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbSplash"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:max="100"
+        android:visibility="invisible"
+        android:progressTint="#f00"
+        android:indeterminate="false" />
 </RelativeLayout>
