--- a/src/main/res/layout-large/activity_splash.xml
+++ b/src/main/res/layout-large/activity_splash.xml
@@ -7,7 +7,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/imageView"
-        android:src="@drawable/icon_splash"
+        android:src="@drawable/extra_icon"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="205dp" />
