--- a/src/main/res/layout-small/activity_splash.xml
+++ b/src/main/res/layout-small/activity_splash.xml
@@ -7,7 +7,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/imageView"
-        android:src="@drawable/icon_splash"
+        android:src="@mipmap/ic_launcher"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
