--- a/src/main/res/layout/activity_medical_details_que1.xml
+++ b/src/main/res/layout/activity_medical_details_que1.xml
@@ -28,39 +28,38 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Have any time suffered with any of the following ( Select all that apply ) :"
-            android:id="@+id/tvQue2"
+            android:text="@string/medical_details_que1"
+            android:id="@+id/tvQue1"
             android:textSize="15sp"
-            android:layout_alignTop="@+id/tvQue_2"
-            android:layout_toRightOf="@+id/tvQue_2"
-            android:layout_toEndOf="@+id/tvQue_2" />
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/tvQue_1"
+            android:layout_toEndOf="@+id/tvQue_1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="(1) "
-            android:id="@+id/tvQue_2"
+            android:id="@+id/tvQue_1"
             android:textSize="15sp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="24dp" />
+            android:layout_alignParentStart="true" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancer"
+            android:text="@string/medical_details_que1_option_1"
             android:id="@+id/cbQue1_1"
             android:checked="false"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/tvQue2"
-            android:layout_toRightOf="@+id/tvQue_2"
-            android:layout_toEndOf="@+id/tvQue_2" />
+            android:layout_below="@+id/tvQue1"
+            android:layout_alignLeft="@+id/tvQue1"
+            android:layout_alignStart="@+id/tvQue1"
+            android:layout_marginTop="18dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Liver Disease ( Jaundice )"
+            android:text="@string/medical_details_que1_option_2"
             android:id="@+id/cbQue1_2"
             android:checked="false"
             android:layout_below="@+id/cbQue1_1"
@@ -70,7 +69,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HIV AIDS"
+            android:text="@string/medical_details_que1_option_3"
             android:id="@+id/cbQue1_3"
             android:checked="false"
             android:layout_below="@+id/cbQue1_2"
@@ -80,7 +79,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Heart / Cardiac Disease"
+            android:text="@string/medical_details_que1_option_4"
             android:checked="false"
             android:layout_below="@+id/cbQue1_3"
             android:layout_alignLeft="@+id/cbQue1_3"
@@ -90,7 +89,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chronic Astuama"
+            android:text="@string/medical_details_que1_option_5"
             android:checked="false"
             android:id="@+id/cbQue1_5"
             android:layout_below="@+id/cbQue1_4"
@@ -100,7 +99,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Major Allergy"
+            android:text="@string/medical_details_que1_option_6"
             android:checked="false"
             android:id="@+id/cbQue1_6"
             android:layout_below="@+id/cbQue1_5"
@@ -110,7 +109,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hepatitis B"
+            android:text="@string/medical_details_que1_option_7"
             android:checked="false"
             android:id="@+id/cbQue1_7"
             android:layout_below="@+id/cbQue1_6"
@@ -120,7 +119,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hepatitis C"
+            android:text="@string/medical_details_que1_option_8"
             android:checked="false"
             android:id="@+id/cbQue1_8"
             android:layout_below="@+id/cbQue1_7"
@@ -130,7 +129,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chronic Kidney Disease"
+            android:text="@string/medical_details_que1_option_9"
             android:checked="false"
             android:id="@+id/cbQue1_9"
             android:layout_below="@+id/cbQue1_8"
@@ -140,7 +139,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Diabetes"
+            android:text="@string/medical_details_que1_option_10"
             android:checked="false"
             android:id="@+id/cbQue1_10"
             android:layout_below="@+id/cbQue1_9"
