--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="showCaseText">#0cf</color>
     <color name="showCaseBackground">#0cf</color>
 
-    <color name="tutorial_slide_background">#f00</color>
+    <color name="tutorial_slide_background">#F50</color>
 </resources>
