--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -10,4 +10,6 @@
     <item
         android:id="@+id/action_logout"
         android:title="Logout"/>
+    <item android:id="@+id/action_tutorial"
+        android:title="Tutorial"/>
 </menu>
